More Detailed Score Results in Game Control Panel
I have added a feature to the game control panel so that the game will
display more detailed results that show how many times the player has
been shot by each of their opponents. I also added the Game Control
Panel version number to the game score file header. Updated Help File
with pages for version history, about window, and help file.

--- a/Game Control Panel/Technical Manual/Help/About.html
+++ b/Game Control Panel/Technical Manual/Help/About.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 <h1>Accessing Application Information</h1>
-<p>The About Window will display the current version of Game Control Panel that you are running.</p>
+<p>The About Window will display the current version of Game Control Panel that you are running.This feature is only availible in <a href="./Versions.html">Game Control Panel version 1.1 or greater</a>.</p>
 <p>To access the About Window:</p>
 <ol>
 <li>Click on the <b>File</b> button in the menu bar located on the top left corner of the window.</li>
