--- a/Game Control Panel/Technical Manual/Help/index.html
+++ b/Game Control Panel/Technical Manual/Help/index.html
@@ -17,6 +17,7 @@
 	<li><a href="./Controls.html">Controls</a></li>
 	<li><a href="./Indicators.html">Indicators</a></li>
 	<li><a href="./About.html">Accessing About Information</a></li>
+	<li><a href="./Help.html">Help File</a></li>
 	</ul>
 </li>
 <li><a href="./Troubleshooting.html">Troubleshooting</a></li>
@@ -34,6 +35,7 @@ Game Scores File
 	<li><a href="./AccessingGameData.html">Accessing Game Data</a></li>
 	</ul>
 </li>
+<li><a href="./Versions.html">Versions</a></li>
 <li><a href="./Glossary.html">Glossary</a></li>
 </ol>
 </body>
