Updated Game Control Panel Help File for Version 1.1 Release
Updated help file and tested publishing to www.davidsutton.cn/robotag
and installing updates

--- a/Game Control Panel/Technical Manual/Help/AccessingGameData.html
+++ b/Game Control Panel/Technical Manual/Help/AccessingGameData.html
@@ -4,7 +4,10 @@
 </head>
 <body>
 <h1>Accessing Game Data</h1>
-<p>The GameScores file for a game in progress is located at C:/Robotag/GameScores.txtArchived game files are located at C:/Robotag/Archives</p>
+
+<p>The GameScores file for a game in progress is located at <a href="C:/Robotag/GameScores.txt">C:/Robotag/GameScores.txt</a>
+<br>
+Archived game files are located at <a href="C:/Robotag/Archives">C:/Robotag/Archives</a></p>
 <h2>To View Archived Game Data:</h2>
 <ol>
 <li>Go to the C:/ directory
