--- a/Game Control Panel/Technical Manual/Help/Installation.html
+++ b/Game Control Panel/Technical Manual/Help/Installation.html
@@ -14,10 +14,36 @@
 <i>Installation Folder</i></center></a>
 </li>
 <li>Double click the setup icon.</li>
-<li>If a security warning pops up notifying you that this application is from an unknown publisher click Install.
+<li>If a security warning pops up notifying you that this application is from an unknown publisher click <b>Install</b>.
 <a href="./SecurityWarning.jpg"><center><img src="./SecurityWarning.jpg" width=100% style="max-width:500px;">
 <br>
 <i>Security Warning</i></center></a>
+</li>
+<li>Application is now ready to use. <a href="./Troubleshooting.html#AlreadyInstalled">Click this link to view troubleshooting if the insallation does not complete for any reason.</a></</li>
+</ol>
+<h2>Installing from the Internet</h2>
+<p>If your computer does not already have .NET Framework 4 or Windows Installer 4.5 additional steps may be required to download and install these components. Just follow the on screen instructions to download and install these components. If these components are installed your computer will need to be restarted.</p>
+<ol>
+<li>Open the Game Control Panel website to download the program. <a href="http://www.davidsutton.cn/robotag/publish.htm">http://www.davidsutton.cn/robotag/publish.htm</a></li>
+<a href="./InstallationWebsite.png"><center><img src="./InstallationWebsite.png" width=100% style="max-width:593px;">
+<br>
+<i>Installation Website</i></center></a>
+</li>
+<li>Click on the <b>Install</b> button to download the installer.</li>
+<li>When your web browser asks you to if you would like to run or save the application select <b>Run</b>.
+<a href="./DownloadWindow.png"><center><img src="./DownloadWindow.png" width=100% style="max-width:458px;">
+<br>
+<i>Security Warning</i></center></a>
+</li>
+<li>If a security warning pops up notifying you that the publisher could not be verified click <b>Run</b>
+<a href="./DownloadSecurityWarning.png"><center><img src="./DownloadSecurityWarning.png" width=100% style="max-width:404px;">
+<br>
+<i>Download Security Warning</i></center></a>
+</li>
+<li>If a security warning pops up notifying you that this application is from an unknown publisher click <b>Install</b>.
+<a href="./SecurityWarning.jpg"><center><img src="./SecurityWarning.jpg" width=100% style="max-width:500px;">
+<br>
+<i>Installation Security Warning</i></center></a>
 </li>
 <li>Application is now ready to use. <a href="./Troubleshooting.html#AlreadyInstalled">Click this link to view troubleshooting if the insallation does not complete for any reason.</a></</li>
 </ol>
