--- a/Game Control Panel/Technical Manual/Help/index.html
+++ b/Game Control Panel/Technical Manual/Help/index.html
@@ -24,6 +24,7 @@
 <li>Setup Required for User (Installation/Uninstallation)
 	<ul>
 	<li><a href="./Installation.html">Installation</a></li>
+	<li><a href="./Updates.html">Installing Updates</a></li>
 	<li><a href="./Uninstallation.html">Uninstallation</a></li>
 	</ul>
 </li>
