--- a/Game Control Panel/Technical Manual/Help/About.html
+++ b/Game Control Panel/Technical Manual/Help/About.html
@@ -4,11 +4,11 @@
 </head>
 <body>
 <h1>Accessing Application Information</h1>
-<p>The About Window will display the current version of Game Control Panel that you are running.This feature is only availible in <a href="./Versions.html">Game Control Panel version 1.1 or greater</a>.</p>
+<p>The About Window will display the current version of Game Control Panel that you are running.This feature is only available in <a href="./Versions.html">Game Control Panel version 1.1 or greater</a>.</p>
 <p>To access the About Window:</p>
 <ol>
 <li>Click on the <b>File</b> button in the menu bar located on the top left corner of the window.</li>
-<li>Clik on the word <b>About</b></li>
+<li>Click on the word <b>About</b></li>
 </ol>
 <a href="./AboutWindow.jpg"><center><img src="./AboutWindow.jpg" width=100% style="max-width:224px;">
 <br>
