--- a/Game Control Panel/Technical Manual/Help/Help.html
+++ b/Game Control Panel/Technical Manual/Help/Help.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 <h1>Help File</h1>
-<p>The help file may be accessed by selecting the <b>Help</b> menu option at the top of the Game Control Panel window in <a href="./Versions.html">Game Control Panel version 1.1 or greater</a> or by visiting <a href="http://www.davidsutton.cn/robotag">http://www.davidsutton.cn/robotag</a> The Help File in the Game Control Panel application does not require internet access, but will only be updated when the Game Control Panel is updated. For the most updated information visit the help website with your web browser.</p>
+<p>The help file may be accessed by selecting the <b>Help</b> menu option at the top of the Game Control Panel window in <a href="./Versions.html">Game Control Panel version 1.1 or greater</a> or by visiting <a href="http://www.davidsutton.cn/robotag/help">http://www.davidsutton.cn/robotag/help</a> The Help File in the Game Control Panel application does not require internet access, but will only be updated when the Game Control Panel is updated. For the most updated information visit the help website with your web browser.</p>
 <h2>To access the Help File from the Game Control Panel:</h2>
 <ol>
 <li>Click on the <b>Help</b> button in the menu bar located on the top of the window.</li>
@@ -14,7 +14,7 @@
 </ol>
 <h2>To access the Help File from a web browser:</h2>
 <ol>
-<li>Visit <a href="http://www.davidsutton.cn/robotag">http://www.davidsutton.cn/robotag</a></li>
+<li>Visit <a href="http://www.davidsutton.cn/robotag/help">http://www.davidsutton.cn/robotag/help</a></li>
 </ol>
 </body>
 </html>
