--- a/Game Control Panel/Technical Manual/Help/Indicators.html
+++ b/Game Control Panel/Technical Manual/Help/Indicators.html
@@ -14,7 +14,7 @@
 </p>
 <p><dt>B-Game Scores:</dt><dd>This text box will display the contents of the GameScores.txt file.</dd>
 </p>
-<p><dt>C-Points Indicator:</dt><dd>The number underneath the player or team indicates how many points that team or player has earned during the dura>on of the game.</dd>
+<p><dt>C-Points Indicator:</dt><dd>The number underneath the player or team indicates how many points that team or player has earned during the duration of the game.</dd>
 </p>
 <p><dt>D-Life Indicators:</dt>
 <dd>The green rectangles underneath the player or team names indicate how much life each player has remaining in the game. When the rectangle is completely full with the green bar the player or team has the maximum number of lives. When the rectangle is completely empty of the green bar that player or team does not have any life remaining.</dd>
