--- a/Game Control Panel/Technical Manual/Help/Versions.html
+++ b/Game Control Panel/Technical Manual/Help/Versions.html
@@ -25,6 +25,7 @@
 <li>Added a <a href="./Help.html">help file</a>.</li>
 <li>More detailed score information showing how many times a player was shot by each of their opponents.</li>
 <li>Displays version information in score file.</li>
+<li>Displays helpful tooltips when a user hovers over a control with their mouse.</li>
 <li>Checks for updates from <a href="http://www.davidsutton.cn/robotag">http://www.davidsutton.cn/robotag</a></li>
 </ul>
 </dd>
