--- a/Game Control Panel/Technical Manual/Help/Help.html
+++ b/Game Control Panel/Technical Manual/Help/Help.html
@@ -8,9 +8,10 @@
 <h2>To access the Help File from the Game Control Panel:</h2>
 <ol>
 <li>Click on the <b>Help</b> button in the menu bar located on the top of the window.</li>
+<li>Select <b>Open Help File</b> from the drop down menu.
 <a href="./Help.jpg"><center><img src="./Help.jpg" width=100% style="max-width:640px;">
 <br>
-<i>Game Control Panel Help File</i></center></a>
+<i>Game Control Panel Help File</i></center></a></li>
 </ol>
 <h2>To access the Help File from a web browser:</h2>
 <ol>
